--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,28 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+admin_area:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
+
+
+#A PARTIR DE AQUI SE CARGAN LAS RUTAS QUE PERMITEN REGISTRAR Y CAMBIAR CONTRASEÑAS O VER PERFIL
+# Sonata User
+sonata_user_admin_security:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+    prefix: /admin
+sonata_user_admin_resetting:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_resetting.xml'
+    prefix: /admin/resetting
+# FOS User
+fos_user:
+    resource: '@FOSUserBundle/Resources/config/routing/all.xml'
+fos_user_group:
+    resource: '@FOSUserBundle/Resources/config/routing/group.xml'
+    prefix: /group
