--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "sensio/framework-extra-bundle": "^5.0.0",
         "sonata-project/admin-bundle": "^3.32",
         "sonata-project/doctrine-orm-admin-bundle": "^3.4",
+        "sonata-project/easy-extends-bundle": "^2.5",
+        "sonata-project/user-bundle": "^4.1",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
